--- a/Shop/Shop.ApplicationServices/Shop.ApplicationServices.csproj
+++ b/Shop/Shop.ApplicationServices/Shop.ApplicationServices.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.23" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Nancy" Version="2.0.0" />
   </ItemGroup>
