--- a/Shop/Shop/appsettings.json
+++ b/Shop/Shop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TARgv22Shopasd;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TARgv22Shopakl;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
 
   "Logging": {
